--- a/api/docker/nginx/default.conf
+++ b/api/docker/nginx/default.conf
@@ -7,9 +7,7 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
-        set_by_lua $upstream_host 'return os.getenv("UPSTREAM") or "php:9000"';
-        fastcgi_pass $upstream_host;
-        resolver local=on;
+        fastcgi_pass api:9000;
 
         # Increase the buffer size to handle large cache invalidation headers
         fastcgi_buffer_size 32k;
