--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,6 +8,8 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 RUN npm install -g @angular/cli@7.3.9
+COPY package.json .
+RUN npm install 
 
 # start app
 CMD ng serve --host 0.0.0.0 --disable-host-check
